--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <body>
         <h1>Welcome to my resume!</h1>
         <h2>You are one step closer to hire me.</h2>
-    
+            <a href="./resume1.html">Watch Resume 1</a>
     </body>
 </html>
